<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.GameScreen">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
            android:text="@string/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ConcedeButton"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/drawButton"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp" android:id="@+id/button"/>
    <Button
            android:text="@string/concede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ConcedeButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"/>
    <Button
            android:text="@string/draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/drawButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" android:layout_marginEnd="5dp" app:layout_constraintEnd_toEndOf="parent"/>
    <edu.rutgers.chess.ui.board.ChessBoardView
            android:orientation="vertical"
            android:layout_width="400dp"
            android:layout_height="500dp"
            android:id="@+id/board"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/turnLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>